# passive_bipedal_walker

./: Abroll_1.SLDPRT  Fuß_Baiugr.SLDASM  Knie_gelenk_oben.SLDPRT  README.md  Unterschenkel.SLDPRT
CAD/: Fußplatte.SLDPRT  Oberschenkel.SLDPRT  knie_platte.SLDPRT
erster_entwurf/: CMakeLists.txt  package.xml
erster_entwurf/config/: joint_names_erster_entwurf.yaml
erster_entwurf/launch/: display.launch
erster_entwurf/urdf/: erster_entwurf.urdf  mjmodel.xml
src/CAD/: Abroll_2.SLDPRT  Hüfte_gelenk.SLDPRT  Knie_gelenk_unten.SLDPRT
src/CAD_2/: hip_connector.SLDPRT  left_upper_leg.SLDPRT  lower_leg.SLDPRT  right_upper_leg.SLDPRT  walker_design_2.SLDASM  weight.SLDPRT  ~$weight.SLDPRT
src/CAD_3/: hüfte_abstandshülse.SLDPRT  left_leg_link.SLDPRT  right_leg_link.SLDPRT  walker.SLDASM
src/CAD_5/: left_leg_link.SLDPRT  right_leg_link.SLDPRT  walker.SLDASM
src/erster_entwurf/: package.xml  setup.cfg  setup.py
src/erster_entwurf/launch/: gazebo.launch
src/erster_entwurf/meshes/: base_link.STL  connector_link.STL
src/erster_entwurf/urdf/: erster_entwurf.csv  erster_entwurf.urdf  lower_link.STL  thigh_link_1.STL  thigh_link_2.STL
src/ramp_meshes/: ramp_10_deg.STL  ramp_11_deg.STL  ramp_12_deg.STL  ramp_13_deg.STL  ramp_14_deg.STL  ramp_15_deg.STL  ramp_16_deg.STL  ramp_17_deg.STL  ramp_18_deg.STL  ramp_19_deg.STL  ramp_1_deg.STL  ramp_20_deg.STL  ramp_2_deg.STL  ramp_3_deg.STL  ramp_4_deg.STL  ramp_5_deg.STL  ramp_6_deg.STL  ramp_7_deg.STL  ramp_8_deg.STL  ramp_9_deg.STL
src/ramp_meshes_1/: CMakeLists.txt  package.xml
src/walker_design_1/: package.xml  setup.cfg  setup.py
src/walker_design_1/config/: rviz_config.rviz
src/walker_design_1/launch/: display.launch.py  gazebo.launch  gazebo.launch.py  gazebo_example_launch.py
src/walker_design_1/urdf/: walker_design_1.urdf
src/walker_design_1/worlds/: ramp.world
src/walker_design_2/: CMakeLists.txt  (+2 more)
urdf/: description.txt  erster_entwurf_export.SLDASM.urdf
(+76 files in other folders)
