<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker_design_1</name>
  <version>0.0.0</version>
  <description>First walker design with knee joints. Group project for the major "Humanoide Robotik", 5. Semester</description>
  <maintainer email="khoa190602@gmail.com">tom</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="home/tom/passive_bipedal_walker/install/walker_design1/share/walker_design_1/urdf/walker_design_1.urdf"/>
  </export>
</package>
